# circt

./: AGENTS.md  CMakeLists.txt  README.md  TechMapping-Roadmap.md  bench_boom_mega.txt  choice.md  compare.py  compare.sh  compare2.sh  fpu.mlir  freq.py  p  parse_top_paths.py  test.fir  test.sh  test2.sh  test3.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: buildAndTest.yml  cleanupCache.yml  nightlyIntegrationTests.yml  shortIntegrationTests.yml  unifiedBuildTestAndInstall.yml  unifiedBuildTestAndInstallStatic.yml
benchmarks/: a.txt  bench.txt
cmake/modules/: AddCaDiCaL.cmake
docs/: LogicSynthesis.md  TimingAnalysis-Roadmap.md
docs/Timing/: 0001-TimingAnalysis-Add-partial-timing-graph-build-for-ta.patch  0002-TimingAnalysis-Add-hierarchical-partial-build-and-ci.patch  DB.md
docs/TimingAnalysis/: CCSPilotWaveformDerived.md  NLDMArcResolution.md  Roadmap.md  SlewConvergence.md
docs/proposals/: partial-timing-graph-build.md
include/circt/: CMakeLists.txt  InitAllPasses.h  InitAllTranslations.h
include/circt-c/: Synthesis.h
include/circt/Dialect/Synth/: CMakeLists.txt  Synth.td  SynthAttributes.h  SynthAttributes.td  SynthOpInterfaces.h  SynthOpInterfaces.td  SynthOps.h  SynthOps.td  SynthUtils.h
include/circt/Dialect/Synth/Analysis/: LongestPathAnalysis.h  PathFilter.h  ResourceUsageAnalysis.h
include/circt/Dialect/Synth/Analysis/Timing/: ArrivalAnalysis.h  DelayModel.h  Liberty.h  ObjectCollection.h  PathEnumerator.h  RequiredTimeAnalysis.h  TimingAnalysis.h  TimingGraph.h
include/circt/Dialect/Synth/Transforms/: CMakeLists.txt  CutRewriter.h  ExactMIGDatabase.h  ExactSynthesis.h  SynthMockturtlePasses.td  SynthPasses.h  SynthPasses.td  SynthesisPipeline.h
integration_test/: lit.cfg.py  lit.site.cfg.py.in
integration_test/EmitVerilog/: array.mlir
integration_test/YosysIntegration/: synth.mlir
integration_test/circt-synth/: circt-synth-aig-exact.mlir  circt-synth-cut-rewrite.mlir  circt-synth-dbgen.mlir  comb.mlir  exact-mig-lec.mlir  exact-synthesis.mlir  functional-reduction-z3.mlir  greedy-cut-rewriter-change-lec.mlir  greedy-cut-rewriter-large-lec.mlir  greedy-cut-rewriter-lec.mlir  mapping-lec.mlir  synth-logic-lec.mlir
lib/CAPI/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Dialect/Synth/Transforms/: AIGERRunner.cpp  AnnotateTechLib.cpp  BackwardSignalTracker.cpp  CMakeLists.txt  CutRewriteDB.cpp  CutRewriteDBImpl.h  CutRewriter.cpp  DIGYCareResub.cpp  ExactMIG.cpp  ExactSynthesis.cpp  ExactSynthesisImpl.h  FunctionalReduction.cpp  GenSupergates.cpp  GenericLUTMapper.cpp  GreedyCutRewriter.cpp  LinkLiberty.cpp  LowerVariadic.cpp  LowerWordToBits.cpp  MIGAlgebraicRewriting.cpp  PredefinedCutRewriteDB.cpp  SOPBalancing.cpp  StructuralHash.cpp  SynthPreprocess.cpp  SynthTransformsInternals.h  SynthesisPipeline.cpp  TechMapper.cpp  TestPriorityCuts.cpp
lib/Dialect/Synth/Transforms/MockturtleIntegration/: CMakeLists.txt  Emap.cpp  MockturtleAdapter.cpp  MockturtleAdapter.h  MockturtlePasses.cpp  NetworkConversion.cpp  NetworkConversion.h  README.md  Refactor.cpp
lib/Dialect/Synth/Transforms/MockturtleIntegration/Bindings/: Bind.cpp  CMakeLists.txt
lib/FIRParser/: FIRParser.cpp
lib/Firtool/: Firtool.cpp
lib/Reduce/: Reduction.cpp
lib/Support/: APInt.cpp  CMakeLists.txt  InstanceGraph.cpp  LoweringOptions.cpp  NPNClass.cpp  SATSolver.cpp  SatSolver.cpp  TruthTable.cpp
lib/Synthesis/: CMakeLists.txt  CutRewriter.cpp  SynthesisPipeline.cpp
lib/Transforms/: MemoryBanking.cpp
reports/: om-evaluator-refactor-status-2026-04-17.md
sandbox/: fraig.sh  mul.sv
test/: CMakeLists.txt  lit.cfg.py
test/CAPI/: aig.c  synth.c
test/Synthesis/: lut-mapper.mlir  tech-mapper-error.mlir  tech-mapper.mlir
test/circt-sta/: ccs-pilot-timing-report.mlir  ccs-pilot-vector-axis-linear-report.mlir  ccs-pilot-vector-grid-interpolation-report.mlir  ccs-pilot-vector-interpolation-report.mlir  ccs-pilot-vector-template-semantics-report.mlir  ccs-pilot-waveform-delay-report.mlir  e2e-liberty-pipeline.mlir  mixed-ccs-pilot-critical-path-policy.mlir  nldm-timing-report-chain.mlir  nldm-timing-report-inverter.mlir
test/circt-synth/: basic.mlir  ccs-pilot-timing-report.mlir  ccs-pilot-waveform-delay-multi-input.mlir  ccs-pilot-waveform-delay-report.mlir  commandline.mlir  constant-ports.mlir  functional-reduction-mini-sat-crash.mlir  liberty-file.mlir  mixed-ccs-pilot-critical-path-policy.mlir  mixed-ccs-pilot-timing-report.mlir  nldm-timing-report-chain.mlir  nldm-timing-report.mlir  path-e2e.mlir  supergates-5input-e2e.mlir  supergates-e2e.mlir
test/circt-test/: config.mlir
test/firtool/: annotation-openaggs-error.fir  annotation-openaggs.fir  dpi.fir  import-ref.fir  instance-choice.fir  instchoice.fir  memory.fir  memoryLowering.fir  memoryMetadata.fir  phase-ordering.fir  prefixMemory.fir  print.fir  stop.fir
test/om-linker/: link.mlir
tools/: CMakeLists.txt
tools/circt-lec/: CMakeLists.txt  circt-lec.cpp
tools/circt-opt/: CMakeLists.txt
unittests/Dialect/Synth/: CMakeLists.txt  CutRewriterTest.cpp  ISOPTest.cpp  LongestPathTest.cpp  TimingAnalysisTest.cpp
utils/: benchmark_cut_rewriter.py
(+558 files in other folders)
