add_circt_unittest(CIRCTSynthTests
  CutRewriterTest.cpp
  LongestPathTest.cpp
  TimingAnalysisTest.cpp
)

target_link_libraries(CIRCTSynthTests
  PRIVATE
  CIRCTHW
  CIRCTSeq
  CIRCTSynth
  CIRCTSynthAnalysis
  CIRCTTimingAnalysis
  CIRCTHWTransforms
  CIRCTCombToSynth
  MLIRTransforms
  MLIRIR
  MLIRParser
)
